Chapter12/fortune-replica-pvc-rox.yaml
apiVersion: v1
kind: Pod
metadata:
  generateName: fortune-rox-replica-
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - name: http
      containerPort: 80
    volumeMounts:
    - name: content
      mountPath: /usr/share/nginx/html
      readOnly: true
  volumes:
  - name: content
    persistentVolumeClaim:
      claimName: fortune-rox
