Chapter12/temp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kiada-001
  labels:
    app: kiada
    rel: stable
spec:
  volumes:
  - name: etc-envoy
    projected:
      sources:
      - configMap:
          name: kiada-envoy-config
      - secret:
          name: kiada-tls
          items:
          - key: tls.crt
            path: example-com.crt
          - key: tls.key
            path: example-com.key
            mode: 0600
  containers:
  - name: kiada
    image: luksa/kiada:0.5
    imagePullPolicy: IfNotPresent
    ports:
    - name: http
      containerPort: 8080
    readinessProbe:
      httpGet:
        port: 8080
        path: /healthz/ready
        scheme: HTTP
  - name: envoy
    image: envoyproxy/envoy:v1.31-latest
    command: [ "envoy", "-c", "/etc/config/envoy.yaml" ]
    volumeMounts:
    - name: etc-envoy
      mountPath: /etc/config
      readOnly: true
    ports:
    - name: https
      containerPort: 8443
    - name: admin
      containerPort: 9901
    readinessProbe:
      httpGet:
        port: 8443
        path: /healthz/ready
        scheme: HTTPS
